--- a/src/index.css
+++ b/src/index.css
@@ -20,17 +20,11 @@
 }
 
 .black-gradient {
-  background: #000000; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #434343,
-    #000000
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #434343,
-    #000000
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: rgb(0,0,0);
+  background: -moz-linear-gradient(160deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 35%, rgba(187,8,8,1) 100%);
+  background: -webkit-linear-gradient(160deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 35%, rgba(187,8,8,1) 100%);
+  background: linear-gradient(160deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 35%, rgba(187,8,8,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#bb0808",GradientType=1);
 }
 
 .violet-gradient {
